# gittools

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
gittools/: __init__.py  gittools.py
tests/: metadata_file_test.json  test_gittools.py
