[metadata]
name = gittools
author = Olivier Vincent
author_email = olivier.vincent@univ-lyon1.fr
url = https://cameleon.univ-lyon1.fr/ovincent/gittools
description = Tools to get git data in python, based on gitpython
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = git, python
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    gitpython
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
